class Administrador extends Empleado {
    public Administrador(String nombre, String id) {
        super(nombre, id, "Administrador");
    }
}