class Bolso extends Producto {
    public Bolso(String codigo, String descripcion, String ubicacion, int stock, double precio) {
        super(codigo, descripcion, ubicacion, stock, precio);
    }
}
