class Gerente extends Empleado {
    public Gerente(String nombre, String id) {
        super(nombre, id, "Gerente");
    }
}