class Lonchera extends Producto {
    public Lonchera(String codigo, String descripcion, String ubicacion, int stock, double precio) {
        super(codigo, descripcion, ubicacion, stock, precio);
    }
}
